modifica service-project accesso logIn

--- a/overviewApp/src/app/components/project/project.component.html
+++ b/overviewApp/src/app/components/project/project.component.html
@@ -1,7 +1,7 @@
 <p>componente project</p>
 
 
-<button (click)="logIn()">logIn end get project</button>
+<button (click)="getProject()">get project</button>
 <div class="projectCard" *ngFor="let p of projects">
 
     <ul>
