--- a/overviewApp/src/app/components/user/user.component.html
+++ b/overviewApp/src/app/components/user/user.component.html
@@ -1,6 +1,50 @@
-<button *ngIf="!isLogged" (click)="logIn()">login</button>
-<button *ngIf="isLogged" (click)="getU()">getUsers</button>
+<h1>Users list</h1>
 
 <ul>
   <li *ngFor="let user of users">{{ user.name }}</li>
 </ul>
+
+<button *ngIf="!isCreate" (click)="isCreate = !isCreate">New user</button>
+
+<div *ngIf="isCreate">
+  <h3>New User</h3>
+  <form [formGroup]="profileForm">
+    <p>
+      <span>Name</span>
+      <input id="name" type="text" formControlName="name" />
+    </p>
+    <p>
+      <span>Surname</span>
+      <input id="surname" type="text" formControlName="surname" />
+    </p>
+    <p>
+      <span>Email</span>
+      <input id="email" type="email" formControlName="email" />
+    </p>
+    <p>
+      <span>Password</span>
+      <input id="password" type="password" formControlName="password" />
+    </p>
+    <p>
+      <span>Cost</span>
+      <input id="cost" type="number" formControlName="cost" />
+    </p>
+    <p>
+      <span>Recruitment date</span>
+      <input
+        id="recruitment_date"
+        type="date"
+        formControlName="recruitment_date"
+      />
+    </p>
+    <p>
+      <span>Week working hours</span>
+      <input
+        id="week_working_hours"
+        type="text"
+        formControlName="week_working_hours"
+      />
+    </p>
+    <button (click)="onSubmit()">Create</button>
+  </form>
+</div>
