--- a/overviewApp/src/app/components/user/update-user/update-user.component.html
+++ b/overviewApp/src/app/components/user/update-user/update-user.component.html
@@ -1,4 +1,5 @@
 <h1>Update User</h1>
+<button (click)="deleteUser()">DeleteUser</button>
 <form [formGroup]="profileForm" *ngIf="user">
   <div>
     <span>Name</span>
