--- a/overviewApp/src/app/components/user/user.component.html
+++ b/overviewApp/src/app/components/user/user.component.html
@@ -11,19 +11,19 @@
 <div *ngIf="isCreate">
   <h3>New User</h3>
   <form [formGroup]="profileForm">
-    <p>
+    <div>
       <span>Name</span>
       <input id="name" type="text" formControlName="name" />
-    </p>
-    <p>
+    </div>
+    <div>
       <span>Surname</span>
       <input id="surname" type="text" formControlName="surname" />
-    </p>
-    <p>
+    </div>
+    <div>
       <span>Email</span>
       <input id="email" type="email" formControlName="email" />
-    </p>
-    <p>
+    </div>
+    <div>
       <span>Password</span>
       <input
         id="password"
@@ -31,27 +31,27 @@
         autocomplete="on"
         formControlName="password"
       />
-    </p>
-    <p>
+    </div>
+    <div>
       <span>Cost</span>
       <input id="cost" type="number" formControlName="cost" />
-    </p>
-    <p>
+    </div>
+    <div>
       <span>Recruitment date</span>
       <input
         id="recruitment_date"
         type="date"
         formControlName="recruitment_date"
       />
-    </p>
-    <p>
+    </div>
+    <div>
       <span>Week working hours</span>
       <input
         id="week_working_hours"
         type="number"
         formControlName="week_working_hours"
       />
-    </p>
+    </div>
     <button (click)="back()">Annulla</button>
     <button (click)="onSubmit()">Create</button>
   </form>
