--- a/overviewApp/src/app/components/client/client.component.html
+++ b/overviewApp/src/app/components/client/client.component.html
@@ -1,7 +1,11 @@
-<button (click)="getClient()">Clienti</button>
+<button (click)="getClients()">Clienti</button>
 
 <ul>
-    <li *ngFor="let client of clientsList">{{ client.name }}</li>
+    <li *ngFor="let client of clientsList">
+        <span>{{ client.name }} </span>
+        <button (click)="editClient(client.id)">Modifica</button>
+        <button (click)="deleteClient(client.id)">Elimina</button>
+    </li>
 </ul>
 
 <button (click)="showForm = !showForm">Aggiungi Cliente</button>
