--- a/overviewApp/src/app/components/project/project.component.html
+++ b/overviewApp/src/app/components/project/project.component.html
@@ -1,6 +1,38 @@
 <p>componente project</p>
 
 
+<div>
+  <h2>add project</h2>
+  <form [formGroup]="projectForm" (ngSubmit)="addProject()">
+    <input type="text" name="name" formControlName="name" placeholder="name">
+    <input type="number" name="status" formControlName="status" placeholder="status">
+    <input type="date" name="start_date" formControlName="start_date" placeholder="start_date">
+    <input type="date" name="end_date" formControlName="end_date" placeholder="end_date">
+    
+    <select name="progress" formControlName="progress" id="">
+      <option value="" selected disabled hidden>progress</option>
+      <option [value]="50">50</option>
+      <option [value]="80">80</option>
+      <option [value]="100">100</option>
+    </select>
+
+    <input type="number" name="revenue" formControlName="revenue" placeholder="revenue">
+    <select formControlName="client_id" name="client_id" id="">
+      <option value="" selected disabled hidden>clienti</option>
+      <option *ngFor="let c of client" [value]="c.id">{{c.name}}</option>
+    </select>
+      
+
+   <select placeholder="Begin typing a name to filter..." multiple  formControlName="user_ids"
+     name="user_ids" id="">
+
+     <option value="" selected disabled >collaboratori</option>
+     <option *ngFor="let u of users" [value]="u.id">{{u.name}}</option>
+   </select>
+    <button type="submit">aggiungi</button>
+  </form>
+</div>
+
 <button (click)="getProject()">get project</button>
 <div class="projectCard" *ngFor="let p of projects">
 
@@ -9,21 +41,8 @@
             <span>nome progetto:{{p.name}} --> </span>
             <span>stato: {{p.status}} --> </span>
             <span>progress: {{p.progress}}</span>
+            <button (click)="updateProject(p.id)">update proj</button>
+            <button (click)="delProject(p.id)">delete </button>
         </li>
     </ul>
-</div>
-
-<div>
-  <h2>add project</h2>
-  <form [formGroup]="projectForm" (ngSubmit)="addProject()">
-    <input type="text" name="name" formControlName="name" placeholder="name">
-    <input type="number" name="status" formControlName="status" placeholder="status">
-    <input type="date" name="start_date" formControlName="start_date" placeholder="start_date">
-    <input type="date" name="end_date" formControlName="end_date" placeholder="end_date">
-    <input type="number" name="progress" formControlName="progress" placeholder="progress">
-    <input type="number" name="revenue" formControlName="revenue" placeholder="revenue">
-    <input type="number" name="client_id" formControlName="client_id" placeholder="client_id">
-    <input type="number" name="user_ids" formControlName="user_ids" placeholder="user_ids">
-    <button type="submit">aggiungi</button>
-  </form>
 </div>
