--- a/overviewApp/src/app/components/project/update-project/update-project.component.html
+++ b/overviewApp/src/app/components/project/update-project/update-project.component.html
@@ -2,11 +2,11 @@
 
 <div>
   <h2>add project</h2>
-  <form [formGroup]="projectForm" (ngSubmit)="updateProject()">
-    <input type="text" name="name" formControlName="name" placeholder="{{project.name}}">
+  <form [formGroup] ="projectForm" (ngSubmit)="updateProject()">
+    <input type="text" name="name" formControlName="name" >
     
-    <input type="date" name="start_date" formControlName="start_date" placeholder="{{project.start_date}}">
-    <input type="date" name="end_date" formControlName="end_date" placeholder="{{project.end_date}}">
+    <input type="date" name="start_date" formControlName="start_date" >
+    <input type="date" name="end_date" formControlName="end_date" >
 
     <select name="progress" formControlName="progress" id="" >
       <option value="" selected disabled hidden >progress</option>
@@ -15,7 +15,7 @@
       <option [value]="100">100</option>
     </select>
 
-    <input type="number" name="revenue" formControlName="revenue" placeholder="{{project.revenue}}">
+    <input type="number" name="revenue" formControlName="revenue" >
 
     <select formControlName="client_id" name="client_id" id="">
       <option value="" selected disabled hidden>clienti</option>
