fix resfresh page

--- a/overviewApp/src/app/components/project/project.component.html
+++ b/overviewApp/src/app/components/project/project.component.html
@@ -33,7 +33,7 @@
   </form>
 </div>
 
-<button (click)="getProject()">get project</button>
+<button (click)="getProjects()">get project</button>
 <div class="projectCard" *ngFor="let p of projects">
 
     <ul>
